clang/test/BSC/Negative/Ownership/Owned/owned_init/owned_init.cbs
// RUN: %clang_cc1 -ast-dump -verify %s

void test1() {
    int _Owned a = 10;           // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int _Owned a1 = 10.0f;       // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{incompatible _Owned types, cannot cast 'float' to '_Owned int'}}
    int _Owned c = 10 + 20;      /// expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{incompatible _Owned types, cannot cast 'int' to '_Owned int'}}
    int _Owned b = (int _Owned)10;   // expected-error {{type of 'int' cannot be qualified by '_Owned'}}
    int d = 10;
    int _Owned e = d;   // expected-error {{type of 'int' cannot be qualified by '_Owned'}} expected-error {{incompatible _Owned types, cannot cast 'int' to '_Owned int'}}
    int _Owned f = (int _Owned)d; // expected-error {{type of 'int' cannot be qualified by '_Owned'}}

    float _Owned f1 = 1.0f;// expected-error {{type of 'float' cannot be qualified by '_Owned'}}
    char _Owned c1 = 'c';// expected-error {{type of 'char' cannot be qualified by '_Owned'}}
}

typedef struct A {
    int num;
}SA;

typedef struct B {
    _Owned int num;// expected-error {{type of 'int' cannot be qualified by '_Owned'}}
}SB;

void test2() {
    struct A _Owned a1 = {.num = 10}; // expected-error {{type of 'struct A' cannot be qualified by '_Owned'}}
    SA _Owned a2 = {.num = 20}; // expected-error {{type of 'SA' (aka 'struct A') cannot be qualified by '_Owned'}}
    struct B _Owned b1 = {.num = 10}; // expected-error {{type of 'struct B' cannot be qualified by '_Owned'}}
    SB _Owned b2 = {.num = 20}; // expected-error {{type of 'SB' (aka 'struct B') cannot be qualified by '_Owned'}}
}

void test3() {
    int a = 10;
    int* _Owned b = &a;  // expected-error {{incompatible _Owned types, cannot cast 'int *' to 'int *_Owned'}}
}